src/components/Hero/Hero.scss
@import "src/styles/_settings";

.hero {
  position: relative;
  &__background-left {
    position: absolute;
    top: -250px;
    left: -250px;
    z-index: -4;
    width: 750px;
    height: auto;
    filter: blur(50px);
  }
  &__cta {
    grid-area: cta;
  }

  &__background-right {
    position: absolute;
    width: auto;
    height: auto;
    top: -50px;
    right: -310px;
    filter: blur(50px);
    max-width: 242px;
    z-index: -4;
  }

  &__image-container {
    grid-area: image;
    position: relative;
    margin-top: -100px;
    .hero__image {
      position: relative;
      height: auto;
      max-width: 100%;
      bottom: -4px;
    }

    .hero__background-center {
      position: absolute;
      width: 200%;
      height: auto;
      max-width: 1200px;
      bottom: -1px;
      object-fit: contain;
      left: 42%;
      transform: translateX(-50%);
      z-index: -4;
    }
  }

  &__logo-link {
    position: relative;
  }

  &__noise {
    position: absolute;
    background: url("/../../hero-noise.svg") repeat;
    width: 100vw;
    height: 100%;
    max-height: 2000px;
    opacity: 0.1;
    bottom: 0;
    z-index: -3;
  }
}

.hero__nav {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: auto;
  width: 80%;
  max-width: 1200px;
  height: 64px;
  font-size: 14px;
  align-items: center;
}

.hero__nav-list {
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  gap: 28px;
  .hero__nav-item {
    margin-left: 0px;
    .hero__nav-link {
      text-decoration: none;
      color: white;
      transition-duration: 0.3s;
      &:hover {
        color: #ae11f8;
      }
    }
  }
}

.hero__signup-button {
  background-color: transparent;
  border: 1px solid white;
  color: $primary-color;
  padding: 12px 24px;
  border-radius: 24px;
  font-size: 16px;
  cursor: pointer;
  transition-duration: 0.3s;

  &:hover {
    background-color: $primary-color;
    color: $secondary-color;
  }
}

.hero__main-info {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr auto;
  grid-template-areas: "logo description" "cta image";

  width: 80vw;
  margin: auto;
  margin-top: 50px;
  position: relative;
  max-width: 1200px;
}

.hero__logo-conf {
  grid-area: logo;
  height: auto;
  width: 100%;
  max-height: 350px;
}

.hero {
  position: relative;
  top: 0;
  left: 0;
  margin: auto;
}

.hero__background {
  position: absolute;
  object-fit: cover;
  left: 0;
  bottom: 0;
  z-index: -1;
  width: 100vw;
}

.hero__detail {
  display: flex;
  flex-direction: column;
  gap: 10px;
  font-size: 18px;
  font-weight: 700;
}

.hero__date {
  display: flex;
  padding: 10px 0px;
}

.hero__location {
  display: flex;
  margin-bottom: 22px;
  padding: 3.5px 0px;

  &-text::after {
    content: "";
    display: inline-block;
    width: 7px;
    height: 7px;
    background-color: $tertiary-color;
    border-radius: 50%;
    margin: 0px 8px;
    vertical-align: middle;
  }
}

.hero__icon {
  font-size: 24px;
  margin-right: 8px;
  opacity: 0.6;
}

.hero__description {
  grid-area: description;
  font-size: 18px;
  font-weight: 300;
  padding: 5% 0%;
  padding-left: 10%;
  line-height: 170%;
}

.hero__blur {
  position: absolute;
  bottom: 0;
  left: 0px;
  width: 100vw;
  height: 100%;
  max-height: 180px;
  z-index: 2;
  background: linear-gradient(
    0deg,
    rgba(3, 4, 6, 1) 0%,
    rgba(3, 4, 6, 0.28) 69%,
    rgba(255, 255, 255, 0) 100%
  );
}

@media (max-width: 1023px) {
  .hero {
    &__background-left {
      top: -80px;
      left: -100px;
      z-index: -4;
      width: 340px;
      height: auto;
      filter: blur(30px);
    }

    &__background-right {
      top: -380px;
      right: -60px;
      z-index: -4;
      width: 70px;
      height: auto;
      filter: blur(30px);
    }

    &__nav{
      max-width: 500px;
      width: 90%;
    }

    &__main-info {
      grid-template-columns: 1fr;
      grid-template-areas: "logo" "description" "cta" "image";
      width: 90vw;
      margin-top: 20px;
      max-width: 500px;
    }

    &__nav-list {
      display: none;
    }


    &__signup-button {
      display: none;
    }

    &__image-container {
      margin-top: 0;
    }

    &__description {
      padding: 0;
      padding-left: 0;
      padding-bottom: 16px;
      padding-top: 16px;
      font-size: 14px;
    }

    &__date {
      padding-bottom: 12px;
    }

    &__date-text{
      font-size: 14px;
    }

    &__location-text {
      font-size: 14px;
    }

    &__state{
      font-size: 14px;
    }
  }
}

